# storydeck

./: .eslintignore  .eslintrc.js  .gitignore  .prettierrc.js  README.md  index.html  package.json  tsconfig.json
public/: index.html
src/: App.css  App.js  App.test.js  App.tsx  index.tsx  types.ts
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: db.rs  main.rs  transcriber.rs
src-tauri/src/db/: docs.rs  models.rs
src/components/: AddNewForm.css  AddNewForm.js  AddNewForm.tsx  AddNewResourceForm.js  AddNewResourceForm.scss  AddNewResourceForm.tsx  DecksDisplay.js  ErrorBoundary.tsx  ErrorBounds.tsx  ExpandedStoryDeck.js  Header.css  Header.js  Header.tsx  MainDisplay.css  MainDisplay.js  MainDisplay.tsx  SingleCardDisplay.js  StoryCard.js  StoryDeck.js
src/components/Header/: Header.css  Navigation.tsx  TitleBarActions.tsx  index.tsx
src/components/MainDisplay/: ExpandedStoryDeck.css  ExpandedStoryDeck.scss  ExpandedStoryDeck.tsx  ExpandedTranscript.scss  ExpandedTranscript.tsx  FullTranscriptView.tsx  MainDisplay.css  MainDisplay.scss  MediaDisplay.css  MediaDisplay.tsx  SingleCardDisplay.css  SingleCardDisplay.scss  SingleCardDisplay.tsx  StoryCard.tsx  StoryDeck.css  StoryDeck.tsx  TranscriptExcerptDisplay.css  TranscriptExcerptDisplay.tsx  index.tsx
src/components/content_display/: MediaDisplay.js  TranscriptExcerptDisplay.js
src/components/header/: BackButton.js  BackButton.tsx  Controls.js  NewButton.js  NewButton.tsx
src/context/: deckcontext.tsx  index.tsx  navcontext.tsx
(+27 files in other folders)
