[package]
name = "app"
version = "0.1.0"
description = "Story Deck"
authors = ["Saria Pastor"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.0.4", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = [ "derive" ] }
tauri = { version = "1.2", features = ["api-all"] }
mongodb = "2.1"
bson = { version = "2.0", features = [ "chrono-0_4" ] }
tokio = "1.0"
chrono = { version = "0.4", features = [ "serde" ] }
futures = "0.3.21"
pv_leopard = "*"

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.24"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]
